# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
  "crates/proto",
  "crates/protocol",
  "crates/stargate-telemetry",
  "crates/stargate-auth",
  "crates/pylon-lib",
  "crates/stargate-tls",
  "crates/stargate",
  "crates/stargate-k8s-router",
  "crates/mock-dynamo",
  "crates/stargate-bench",
  "crates/pylon",
]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["NVIDIA"]
license = "Apache-2.0"
homepage = "https://github.com/nvidia-lpu/stargate"
repository = "https://github.com/nvidia-lpu/stargate.git"
description = "Stargate control plane"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
bytes = "1"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
flume = "0.12"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hickory-resolver = "0.24"
hyper = "1.7.0"
memchr = "2"
parking_lot = "0.12"
prost = "0.13.5"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "rustls-tls"] }
scc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.5.6"
thiserror = "2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.13.1"
opentelemetry = "0.28"
opentelemetry-http = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["grpc-tonic", "tls-roots", "trace"] }
prometheus = "0.13"
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
quinn = { version = "0.11", features = ["futures-io"] }
rustls = "0.23"
rustls-native-certs = "0.8"
rcgen = "0.13"
rustls-pemfile = "2"
url = "2"
httparse = "1"
k8s-openapi = { version = "0.27.1", features = ["v1_33"] }
kube = { version = "3.1.0", default-features = false, features = ["aws-lc-rs", "client", "runtime", "rustls-tls"] }

capnp = "0.23"
capnp-futures = "0.23"
capnpc = "0.23"
hyper-util = "0.1"
httpdate = "1"
tempfile = "3"
tonic-build = "0.13.1"
tower = { version = "0.5", features = ["util"] }
http = "1"
async-trait = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

stargate-auth = { path = "crates/stargate-auth" }
stargate-telemetry = { path = "crates/stargate-telemetry" }
stargate-tls = { path = "crates/stargate-tls" }
stargate = { path = "crates/stargate" }
stargate-proto = { path = "crates/proto" }
stargate-protocol = { path = "crates/protocol" }
pylon-lib = { path = "crates/pylon-lib" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"
