# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

genrule(
    name = "skilldata_generated_go",
    srcs = ["//ai-tooling/user/skills:nvcf_public_user_skills"],
    outs = ["skilldata_generated.go"],
    cmd = "$(location //src/clis/nvcf-cli/internal/agentskill/skilldatagen) -strip-prefix=ai-tooling/user/skills -out=$@ $(SRCS)",
    tools = ["//src/clis/nvcf-cli/internal/agentskill/skilldatagen"],
)

go_library(
    name = "agentskill",
    srcs = [
        "install.go",
        "manifest.go",
        ":skilldata_generated_go",
    ],
    importpath = "nvcf-cli/internal/agentskill",
    visibility = ["//src/clis/nvcf-cli:__subpackages__"],
)

go_test(
    name = "agentskill_test",
    srcs = [
        "install_test.go",
        "manifest_test.go",
    ],
    embed = [":agentskill"],
)
