load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "accounts.go",
        "client.go",
        "clusters.go",
        "debug_transport.go",
        "multi_token_transport.go",
        "queues.go",
        "registry.go",
        "secrets.go",
    ],
    importpath = "nvcf-cli/internal/client",
    visibility = ["//src/clis/nvcf-cli:__subpackages__"],
    deps = [
        "//src/clis/nvcf-cli/internal/state",
        "@com_github_spf13_viper//:viper",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_x_oauth2//clientcredentials",
    ],
)

go_test(
    name = "client_test",
    srcs = [
        "client_test.go",
        "clusters_test.go",
        "host_header_transport_test.go",
        "multi_token_transport_test.go",
    ],
    embed = [":client"],
    deps = [
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
