load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "byoo-otel-collector_lib",
    srcs = ["main.go"],
    importpath = "github.com/NVIDIA/nvcf/src/compute-plane-services/byoo-otel-collector/cmd/byoo-otel-collector",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/cli",
        "//internal/logger",
    ],
)

go_binary(
    name = "byoo-otel-collector",
    embed = [":byoo-otel-collector_lib"],
    visibility = ["//visibility:public"],
)
