load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "otelcollector",
    srcs = ["otelcollector.go"],
    importpath = "github.com/NVIDIA/nvcf/src/compute-plane-services/byoo-otel-collector/internal/otelcollector",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/logger",
        "//internal/metrics",
        "@org_golang_x_sys//execabs",
    ],
)

alias(
    name = "go_default_library",
    actual = ":otelcollector",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "otelcollector_test",
    srcs = ["otelcollector_test.go"],
    embed = [":otelcollector"],
    deps = ["//internal/logger"],
)
